------------------------------------------------------------------------------

                  What's new in each version of Interchange
                       (since the version 5.2 branch)

------------------------------------------------------------------------------

Interchange 5.3.3 released on 2005-12-08.


Form
----

* Use current time only as default for stock date widget, not for date_blank
  widget.

Widget
------

* Merge fck widget with htmlarea widget. The rich-text editor can be
  selected by the HTMLAREA_FLAVOUR variable.

Profiles
--------

* Reject invalid dates in "future" profile.

* Accept trailing X as equivalent of 10 in "isbn" profile.


------------------------------------------------------------------------------


Interchange 5.3.2 released on 2005-11-10.


Core
----

* Implement new AccumulateCode and TagRepository directives. The rationale
  is:

    -- There is a huge base of Interchange code, much of which is not
       needed in even the standard catalog with full UI. This causes a
       larger memory profile than necessary.

    -- It is difficult to determine from the page code what code is
       needed, especially when a [tag] can call a $Tag can call
       a filter can call some sort of Action.

    -- A feature is needed to allow building catalogs with a more
       nearly optimal set of code than just "everything".

  If AccumulateCode is no, operation is exactly as before. There have
  been some code initialization changes and routine calling changes,
  but the data structures are identical and no difference in operation
  should be seen.

  If you set AccumulateCode to "Yes" and specify a TagRepository that
  contains all known UserTag, ActionMap, Filter, Widget, etc. etc.
  code, Interchange starts accumulating and compiling these as
  needed.

  The code is sent to the master process for compilation and
  incorporation, so that the next iteration of a page after HouseKeeping