@@ -1238,4 +1238,3 @@ WHATSNEW-4.7
 WHATSNEW-4.9
 WHATSNEW-5.1
 WHATSNEW-5.3
-META.yml                                 Module meta-data (added by MakeMaker)
