@@ -2,7 +2,7 @@
 
                            I N T E R C H A N G E
 
-Interchange 5.3.2
+Interchange 5.3.3
 
 Copyright (C) 2002-2005 Interchange Development Group
 Copyright (C) 1996-2002 Red Hat, Inc.
@@ -81,8 +81,8 @@ as an unprivileged user who will be the only one modifying Interchange files.
 
 Here is the quick installation summary:
 
-gzip -dc interchange-5.3.2.tar.gz | tar xvf -
-cd interchange-5.3.2
+gzip -dc interchange-5.3.3.tar.gz | tar xvf -
+cd interchange-5.3.3
 ./configure
 
 The configure script asks where you'd like to install Interchange, and
