@@ -279,7 +279,7 @@ transactions::auth_code	text	16								Authorization
 transactions::deleted	yesno									Deleted
 transactions::order_id	text	32								Order ID
 transactions::status	select							pending=Pending, shipped=Shipped, partial=Partially shipped, backorder=Back ordered, waiting=Waiting for payment, credit=Waiting for credit check, canceled=Canceled					nullselect
-ui-version										5.3.2
+ui-version										5.3.3
 ui_component::mv_metadata	table								ui_component			mv_metadata								{'ui_data_fields' => "=Maincodelabeldefaulttypewidthheightoptionsfilter=Database lookuplookupfielddb=Help and mischelphelp_urlprependappendpre_filter",'table_width' => "80%",'left_width' => "30%",}
 ui_component::mv_metadata::append	textarea	60	5							Append HTML	<SMALL>HTML to be appended to the widget.Will substitute in the macros _UI_TABLE_, _UI_COLUMN_,_UI_KEY, and _UI_VALUE_, and will resolve relative linkswith absolute links.</SMALL>
 ui_component::mv_metadata::attribute	text	20								Column name	Do not set this.
